--- a/index.html
+++ b/index.html
@@ -15,9 +15,8 @@
 <body class="bg-gradient-to-br from-blue-50 to-indigo-100 min-h-screen">
     <div id="app" class="max-w-6xl mx-auto p-6"></div>
 
-    <script>
-        const API_ENDPOINT = 'https://api.anthropic.com/v1/messages';
-        const MODEL = 'claude-sonnet-4-20250514';
+    <script type="module">
+        const API_ENDPOINT = 'https://generativelanguage.googleapis.com/v1beta/models/gemini-pro:generateContent';
 
         let state = {
             apiKey: '',
@@ -98,19 +97,7 @@
             setState({ loading: true, analyzed: false });
 
             try {
-                const response = await fetch(API_ENDPOINT, {
-                    method: 'POST',
-                    headers: {
-                        'Content-Type': 'application/json',
-                        'x-api-key': state.apiKey,
-                        'anthropic-version': '2023-06-01'
-                    },
-                    body: JSON.stringify({
-                        model: MODEL,
-                        max_tokens: 1000,
-                        messages: [{
-                            role: 'user',
-                            content: `You are a dropshipping expert. Analyze the product category "${state.productQuery}" and recommend 5 reliable suppliers.
+                const prompt = `You are a dropshipping expert. Analyze the product category "${state.productQuery}" and recommend 5 reliable suppliers.
 
 For each supplier, provide:
 - name: Supplier name
@@ -125,7 +112,7 @@ For each supplier, provide:
 - pros: 2-3 key advantages
 - cons: 1-2 potential drawbacks
 
-Respond ONLY with valid JSON in this exact format, no other text:
+Respond ONLY with valid JSON in this exact format, no other text or markdown:
 {
   "suppliers": [
     {
@@ -142,8 +129,23 @@ Respond ONLY with valid JSON in this exact format, no other text:
       "cons": ["string"]
     }
   ]
-}`
-                        }]
+}`;
+
+                const response = await fetch(`${API_ENDPOINT}?key=${state.apiKey}`, {
+                    method: 'POST',
+                    headers: {
+                        'Content-Type': 'application/json'
+                    },
+                    body: JSON.stringify({
+                        contents: [{
+                            parts: [{
+                                text: prompt
+                            }]
+                        }],
+                        generationConfig: {
+                            temperature: 0.7,
+                            maxOutputTokens: 2048
+                        }
                     })
                 });
 
@@ -155,14 +157,20 @@ Respond ONLY with valid JSON in this exact format, no other text:
                     return;
                 }
 
-                const textContent = data.content.filter(item => item.type === 'text').map(item => item.text).join('');
+                if (!data.candidates || !data.candidates[0] || !data.candidates[0].content) {
+                    alert('Invalid response from API. Please try again.');
+                    setState({ loading: false });
+                    return;
+                }
+
+                const textContent = data.candidates[0].content.parts[0].text;
                 const cleanJson = textContent.replace(/```json|```/g, '').trim();
                 const parsed = JSON.parse(cleanJson);
 
                 setState({ suppliers: parsed.suppliers || [], analyzed: true, loading: false });
             } catch (error) {
                 console.error('Error:', error);
-                alert('Error: ' + error.message);
+                alert('Error: ' + error.message + '. Make sure your API key is valid.');
                 setState({ loading: false, suppliers: [] });
             }
         }
@@ -194,7 +202,8 @@ Respond ONLY with valid JSON in this exact format, no other text:
                     icon,
                     el('h1', { className: 'text-4xl font-bold text-gray-800' }, 'Dropshipping Supplier Finder')
                 ),
-                el('p', { className: 'text-gray-600 text-lg' }, 'AI-powered supplier recommendations for your Shopify store')
+                el('p', { className: 'text-gray-600 text-lg' }, 'AI-powered supplier recommendations for your Shopify store'),
+                el('p', { className: 'text-sm text-gray-500 mt-2' }, 'Powered by Google Gemini AI')
             );
         }
 
@@ -210,16 +219,17 @@ Respond ONLY with valid JSON in this exact format, no other text:
             }
 
             return el('div', { className: 'bg-yellow-50 border border-yellow-200 rounded-xl p-6 mb-6' },
-                el('h3', { className: 'font-semibold text-gray-800 mb-2' }, '🔑 Enter Your Anthropic API Key'),
-                el('p', { className: 'text-sm text-gray-600 mb-3' },
-                    'Get your API key from ',
-                    el('a', { href: 'https://console.anthropic.com/', target: '_blank', className: 'text-indigo-600 underline' }, 'console.anthropic.com')
+                el('h3', { className: 'font-semibold text-gray-800 mb-2' }, '🔑 Enter Your Google Gemini API Key'),
+                el('p', { className: 'text-sm text-gray-600 mb-1' },
+                    'Get your FREE API key from ',
+                    el('a', { href: 'https://makersuite.google.com/app/apikey', target: '_blank', className: 'text-indigo-600 underline font-semibold' }, 'Google AI Studio')
                 ),
+                el('p', { className: 'text-xs text-gray-500 mb-3' }, '✨ Completely free - no credit card required!'),
                 el('div', { className: 'flex gap-3' },
                     el('input', {
                         type: 'password',
                         value: state.apiKey,
-                        placeholder: 'sk-ant-...',
+                        placeholder: 'AIza...',
                         className: 'flex-1 px-4 py-2 border border-gray-300 rounded-lg focus:ring-2 focus:ring-indigo-500 focus:border-transparent',
                         oninput: (e) => setState({ apiKey: e.target.value })
                     }),
