--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 <body class="bg-gradient-to-br from-blue-50 to-indigo-100 min-h-screen">
     <div id="app" class="max-w-6xl mx-auto p-6"></div>
 
-    <script type="module">
+    <script>
         const API_ENDPOINT = 'https://generativelanguage.googleapis.com/v1beta/models/gemini-pro:generateContent';
 
         let state = {
